--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "graph-sdk",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "test": "node ./lib/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@microsoft/msgraph-sdk-javascript": "1.0.0-preview.4",
-    "@types/node": "^17.0.40"
-  }
+    "name": "graph-sdk",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc -p tsconfig.json",
+        "test": "node ./lib/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@microsoft/msgraph-sdk-javascript": "1.0.0-preview.4",
+        "@rollup/plugin-commonjs": "^22.0.0",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@types/node": "^17.0.40",
+        "rollup": "^2.77.1",
+        "rollup-plugin-terser": "^7.0.2"
+    }
 }
